[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
categories = ["embedded", "network-programming", "no-std"]
description = "A collection of application-layer protocols built on top of smoltcp."
edition = "2018"
homepage = "https://github.com/plorefice/smolapps"
keywords = ["smoltcp", "network"]
license = "MIT OR Apache-2.0"
name = "smolapps"
readme = "README.md"
repository = "https://github.com/plorefice/smolapps"
version = "0.1.4"

[package.metadata.docs.rs]
all-features = true

[dependencies]
smoltcp = { git = "https://github.com/Luis-Hebendanz/smoltcp.git", branch="pxe_2" }
byteorder = { version = "1.3.4", default-features = false }
managed = { version = "0.7.1", default-features = false }
log = { version = "0.4.8", default-features = false }

[dev-dependencies]
env_logger = "0.7.1"

[features]
default = ["ipv4", "sntp", "tftp"]

# Protocols
sntp = ["smoltcp/socket-udp"]
tftp = ["smoltcp/socket-udp"]
ipv4 = ["smoltcp/proto-ipv4"]

# Standard library support
std = ["smoltcp/std", "managed/std"]

# For test harness
#tap = ["log"]

[[example]]
name = "sntp"
required-features = ["std", "sntp", "tap"]

[[example]]
name = "tftp"
required-features = ["std", "tftp", "tap"]
